Jython NEWS

Jython 2.5.0 rc 1
  Bugs fixed (new numbering due to move to Roundup)
    - [ 1264 ] 'is not' test exhibits incorrect behaviour when wrapping Java objects
    - [ 1295 ] Setting a write-only bean property causes a NPE
    - [ 1272 ] ASTList ClassCastException
    - [ 1261 ] jython -c "import sys; sys.exit(1)" not giving correct exit code.
    - [ 1215 ] extra spaces in import statement break importing

Jython 2.5.0 a0 - b3
  Bugs fixed (new numbering due to move to Roundup)
    - [ 1126 ] ImportError raised for Java subpackages import
    - [ 1111 ] keyword arguments not supported on __import__
    - [ 1567212 ] Jython $py.class bytecode doesn't include the .py's mtime
    - [ 1024 ] Jython $py.class bytecode doesn't include the .py's mtime
    - [ 852818 ] Wrong error message when the second+ parameter to Java wrong
    - [ 1222877 ] duplicate keyword arguments
    - [ 1168 ] ast module not working
    - [ 1192 ] deserialization of Jython classes extending Java classes fails when called from Java
    - [ 1243 ] Running scripts from standalone jar with __run__.py broken
    - [ 1237 ] Asnycore does not seem to work in Jython 2.5 (b0 or b1)
    - [ 1257 ] Pickling (protocol 2) doesn't use overriden itervalues() on dict-derived classes
    - [ 1245 ] modjy passes HTTP headers as unicode objects to the WSGI app
    - [ 1258 ] select() semantics differ from CPython, causing pydoc HTTPd to fail
    - [ 1043 ] Special broadcast host address <broadcast> is not supported.
    - [ 1121 ] listening socket shutdown expects the wrong kind of socket
    - [ 1244 ] Problem letting system choose the port for binding UDP socket
    - [ 1241 ] Assignment to static variable shadows value
    - [ 1234 ] Java classes' MRO resolution can throw an NPE
    - [ 1231 ] 2.5b1 breaks XML DocumentBuilderFactory (in particular, Weblogic 10.3)
    - [ 1230 ] importing with '*' from java packages does not work with 2.5b1
    - [ 1242 ] Tuples allow member assignment